# Omni_Tool

./: CMakeLists.txt  README.md  angle.h  atom.h  bond.h  cell_list.h  chain.h  cluster_analysis.h  compile.sh  cow.h  data.h  dodecahedron.h  ellipsoid.h  force_field.h  globular_sphere.h  histogram.h  ico.pro  icosahedron.h  input.h  io_input.h  io_lammps.h  io_pdb.h  main.cpp  oblatespheroid.h  omni_tool.pro  particle.h  pentamer.h  rdf.h  rng.h  sim_box.h  slab.h  sphere.h  spherepatch.h  tennisball.h  tensor_xyz.h  types.h  xtcanalysis.h
Examples/: gen_monomer  gen_sphere  gen_vesicle  load_vesicle  vmd.script  vmd_gen.script
IO/: io_input.h  io_lammps.h  io_pdb.h
Systems/: flat_membrane.h  generic.h  lipid_nanoparticle.h  membrane.h  system_base.h  system_container.h  vesicle.h  virus_pseudot3.h
particles/: chain.h  cow.h  dodecahedron.h  ellipsoid.h  globular_sphere.h  icosahedron.h  lipid.h  oblatespheroid.h  particle.h  particle_container.h  pentamer.h  slab.h  sphere.h  spherepatch.h  surface.h  tennisball.h
xdrfile-1.1.4/src/: xdrfile_xtc.c
